--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <!-- Write your HTML in this file -->
+<html lang="en">
+<head>
+    <a href="https://flatironschool.com">Flatiron School</a>
+</head>
+
+</html>
